[project]
name = "aniradidoon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "m_tsuru", email = "147146974+m-tsuru@users.noreply.github.com" }
]
dependencies = [
    "textual>=0.47.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "aniradidoon:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "textual-dev>=1.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aniradidoon"]
